# Jeepney-Sentiment-Modeling

./: Makefile  README.md  pyproject.toml
data/interim/: phaseout_sentiments_descriptive_stats.csv  relevancy.csv
data/processed/: combined.csv
data/raw/: keyword_jeepney_fare.csv  keyword_jeepneylivingwage.csv  keyword_jeepneymodernization.csv  keyword_jeepneyprotest.csv
data/raw/dataset_uncombined/: keyword_jeepney_fare.csv  keyword_jeepney_oil.csv  keyword_jeepneydriver.csv  keyword_jeepneyphaseout.csv  keyword_modernizedjeepney.csv  keyword_notopuvphaseout.csv  keyword_puv_phaseout.csv
data/raw/dataset_uncombined/processed/: phaseout.csv  sentiments.csv  translated.csv
docs/: mkdocs.yml
docs/docs/: index.md
py/: __init__.py  dataset.py  features.py  plots.py
py/modeling/: phaseout_modeling_decisiontree.py  phaseout_modeling_logreg.py  phaseout_modeling_randforest.py  predict.py  train.py
