[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py"
version = "0.0.1"
description = "Uses Random Forests, Decision Tree, \u0026 Logistic Regression models to predict twitter posts are for or against the jeepney phaseout in the Philippines"
authors = [
  { name = "Gabe" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["py"]
include = ["pyproject.toml", "py/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["py"]
force-sort-within-sections = true

